[package]
name = "p256-cortex-m4"
description = "Idiomatic, misuse-resistent bindings to P256-Cortex-M4"
version = "0.1.0-alpha.3"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["embedded", "no-std", "cryptography"]
keywords = ["no-std", "nist", "cryptography", "signatures", "cortex-m"]
repository = "https://github.com/ycrypto/p256-cortex-m4"

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabi"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
der = { version = "0.2.9", features = ["big-uint", "derive"], optional = true }
ecdsa = { version = "0.10", package = "ecdsa", default-features = false, optional = true }
elliptic-curve = { version = "0.8", default-features = false, optional = true }
p256-cortex-m4-sys = "0.1.0-alpha.2"
rand_core = { version = "0.5.1", default-features = false }
sha2 = { version = "0.9", default-features = false, optional = true }
zeroize = { version = "1.2.0", default-features = false, features = ["zeroize_derive"] }

[dependencies.p256]
version = "0.7.2"
default-features = false
features = ["arithmetic", "ecdh", "ecdsa", "sha256", "zeroize"]
optional = true

[features]
default = ["non-cortex-m4-fallback"]
der-signatures = ["der"]
prehash = ["sha2"]
non-cortex-m4-fallback = ["ecdsa", "elliptic-curve", "p256"]
