[package]
name = "p256-cortex-m4-sys"
description = "Low-level bindings to P256-Cortex-M4"
version = "0.1.0",
authors = ["Emill", "Nicolas Stalder <n@stalder.io>"]
edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["embedded", "no-std", "cryptography"]
keywords = ["no-std", "nist", "cryptography", "signatures", "cortex-m"]
repository = "https://github.com/ycrypto/p256-cortex-m4-sys"

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabi"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cty = "0.2.1"

[build-dependencies]
bindgen = { version = "0.59.1", default-features = false, optional = true }
cc = "1"
